--- a/config.yml
+++ b/config.yml
@@ -26,6 +26,7 @@ homebrew_installed_packages:
   - youtube-dl
   - smartmontools
   - pv
+  - dockutil
 
 homebrew_taps:
   - homebrew/core
@@ -52,14 +53,13 @@ homebrew_cask_apps:
   - tunnelblick
   - vlc
   - wireshark
-  - wireshark-chmodbpf
+#  - wireshark-chmodbpf
   - rocket-chat
-  - google-drive
-  - google-photos-backup
+  - google-photos-backup-and-sync
   - vagrant-manager
   - vagrant
-  - font-hack
-  - font-hack-nerd-font-mono
+  - caskroom/fonts/font-hack
+  - caskroom/fonts/font-hack-nerd-font-mono
   - xquartz
   - google-drive
   - docker
@@ -68,7 +68,7 @@ homebrew_cask_apps:
   - postico
   - grammarly
   - postman
-  - Itsycal
+  - itsycal
 
 
 mas_installed_apps:
@@ -81,5 +81,77 @@ mas_installed_apps:
   - { id: 485812721, name: "TweetDeck" }
   - { id: 715768417, name: "Microsoft Remote Desktop" }
   - { id: 1091189122, name: "Bear"}
+
+dockitems_remove_all: true
+dockitems_enabled:
+  - name: Safari
+    path: "/Applications/Safari.app"
+    pos: 1
+  - name: Google Chrome
+    path: "/Applications/Google Chrome.app"
+    pos: 2
+  - name: Firefox
+    path: "/Applications/Firefox.app"
+    pos: 3
+  - name: iTerm
+    path: "/Applications/iTerm.app"
+    pos: 4
+  - name: TeamViewer
+    path: "/Applications/TeamViewer.app"
+    pos: 5
+  - name: Slack
+    path: "/Applications/Slack.app"
+    pos: 6
+  - name: Rocket.Chat+
+    path: "/Applications/Rocket.Chat+.app"
+    pos: 7
+  - name: Atom
+    path: "/Applications/Atom.app"
+    pos: 8
+  - name: Atom
+    path: "/Applications/Atom.app"
+    pos: 9
+  - name: Postman
+    path: "/Applications/Postman.app"
+    pos: 10
+  - name: Mail
+    path: "/Applications/Mail.app"
+    pos: 11
+  - name: Discord
+    path: "/Applications/Discord.app"
+    pos: 12
+  - name: TweetDeck
+    path: "/Applications/TweetDeck.app"
+    pos: 13
+  - name: Steam
+    path: "/Applications/Steam.app"
+    pos: 14
+  - name: Wireshark
+    path: "/Applications/Wireshark.app"
+    pos: 15
+  - name: IINA
+    path: "/Applications/IINA.app"
+    pos: 16
+  - name: VirtualBox
+    path: "/Applications/VirtualBox.app"
+    pos: 17
+  - name: OpenEmu
+    path: "/Applications/OpenEmu.app"
+    pos: 18
+  - name: Grammarly
+    path: "/Applications/Grammarly.app"
+    pos: 19
+  - name: Messages
+    path: "/Applications/Messages.app"
+    pos: 20
+  - name: Spotify
+    path: "/Applications/Spotify.app"
+    pos: 21
+  - name: Photos
+    path: "/Applications/Photos.app"
+    pos: 22
+  - name: App Store
+    path: "/Applications/App Store.app"
+    pos: 23
 #pip_packages:
 #  - name: mkdocs
