--- a/main.yml
+++ b/main.yml
@@ -28,6 +28,9 @@
     - role: geerlingguy.mas
       when: mas_installed_apps
       tags: ['mas']
+    - role: fubarhouse.macdock
+      when: dockitems_enabled
+      tags: ['dockutil']
 
   tasks:
     - include: tasks/ansible-setup.yml
