--- a/main.yml
+++ b/main.yml
@@ -6,9 +6,9 @@
     - name: "mas_email"
       prompt: "what is your Apple App Store email?"
       private: no
-    - name: "mas_password"
-      prompt: "What is your Apple App Store password?"
-      private: no
+    # - name: "mas_password"
+    #   prompt: "What is your Apple App Store password?"
+    #   private: no
 
   vars_files:
     - default.config.yml
