--- a/config.yml
+++ b/config.yml
@@ -69,7 +69,8 @@ homebrew_cask_apps:
   - postman
   - itsycal
 
-mas_signin_dialog: yes
+mas_email: ""
+mas_password: ""
 mas_installed_apps:
   - { id: 443987910, name: "1Password" }
   - { id: 497799835, name: "Xcode" }
