--- a/main.yml
+++ b/main.yml
@@ -24,10 +24,10 @@
       when: dockitems_enabled
       tags: ['dockutil']
 
-  vars_prompt:
-    - name: "mas_email"
-      prompt: "what is your Apple App Store email?"
-      private: no
+  # vars_prompt:
+  #   - name: "mas_email"
+  #     prompt: "what is your Apple App Store email?"
+  #     private: no
     # - name: "mas_password"
     #   prompt: "What is your Apple App Store password?"
     #   private: no
